remove deprecated jspwiki.properties, jspwiki_module.xml

--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_fi.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_fi.properties
@@ -68,8 +68,8 @@ diff.traditional.removed = Rivilt\u00E4 {0} alkaen poistettiin {1}
 #
 install.installer.default.appname               = MunWiki
 install.installer.default.pagedir               = Laita asetukset kuntoon:
-install.installer.props.notsaved                = Asetuksia ei voitu tallentaa: {0}.  Kopioi alla oleva tiedosto jspwiki.properties-tiedostoksesi. {1}
-install.installer.props.saved                   = Uudet asetuksesi on tallennettu.  Ole hyv\u00E4, ja k\u00E4ynnist\u00E4 servlet-ymp\u00E4rist\u00F6si uudelleen.  Kelaa sivua hieman alasp\u00E4in n\u00E4hd\u00E4ksesi uuden jspwiki.properties -asetustiedostosi.
+install.installer.props.notsaved                = Asetuksia ei voitu tallentaa: {0}.  Kopioi alla oleva tiedosto preferences.ini -tiedostoksesi. {1}
+install.installer.props.saved                   = Uudet asetuksesi on tallennettu.  Ole hyv\u00E4, ja k\u00E4ynnist\u00E4 servlet-ymp\u00E4rist\u00F6si uudelleen.  Kelaa sivua hieman alasp\u00E4in n\u00E4hd\u00E4ksesi uuden preferences.ini -asetustiedostosi.
 install.installer.unable.read.props             = En voinut lukea asetuksia: {0}
 install.installer.validate.appname              = Sinun on m\u00E4\u00E4ritelt\u00E4v\u00E4 wikillesi nimi.
 install.installer.validate.baseurl              = Sinun on m\u00E4\u00E4ritelt\u00E4v\u00E4 perus-URL t\u00E4lle wikille.
@@ -100,8 +100,8 @@ install.jsp.install.warning                     = Varoitus:
 install.jsp.instr.desc                          = Kun klikkaat <em>Luo asetukset!</em>, asennusohjelma kirjoittaa asetuksesi tiedostoon <code>{0}</code>.  Se luo my\u00F6s yll\u00E4pit\u00E4j\u00E4n tunnuksen ja sille salasanan, sek\u00E4 my\u00F6s yll\u00E4pit\u00E4jien oman ryhm\u00E4n. 
 install.jsp.instr.submit                        = Luo asetukset!
 install.jsp.intro.p1                            = Tervetuloa!  T\u00E4m\u00E4 sivu auttaa sinua JSPWikin asennuksen hankalien vaiheiden ohittamisessa.  Jos n\u00E4et t\u00E4m\u00E4n sivun, olet jo onnistuneesti tehnyt ensimm\u00E4iset asetukset oikein saadaksesi JSPWikin toimimaan servlet-ymp\u00E4rist\u00F6ss\u00E4si.
-install.jsp.intro.p2                            = Seuraavaksi sinun on teht\u00E4v\u00E4 joitain asetuksia.  Kun painat Luo asetukset, asennuspaketissa ollut <code>jspwiki.properties</code> muutetaan tekemiesi asetusten mukaisesti, tai jos sit\u00E4 ei l\u00F6ydy, luodaan uusi.
-install.jsp.intro.p3                            = T\u00E4m\u00E4 asennusohjelma on tarkoitettu l\u00E4hinn\u00E4 niille, jotka vain haluavat p\u00E4\u00E4st\u00E4 nopeasti liikkeelle.  Jos haluat asentaa JSPWikin osaksi olemassaolevaa j\u00E4rjestelm\u00E4\u00E4si, sinun kannattaa muokata <code>jspwiki.properties</code> -tiedostoa suoraan.  L\u00F6yd\u00E4t esimerkkitiedoston hakemistosta <code>wikihakemisto/WEB-INF/</code>.
+install.jsp.intro.p2                            = Seuraavaksi sinun on teht\u00E4v\u00E4 joitain asetuksia.  Kun painat Luo asetukset, asennuspaketissa ollut <code>preferences.ini</code> muutetaan tekemiesi asetusten mukaisesti, tai jos sit\u00E4 ei l\u00F6ydy, luodaan uusi.
+install.jsp.intro.p3                            = T\u00E4m\u00E4 asennusohjelma on tarkoitettu l\u00E4hinn\u00E4 niille, jotka vain haluavat p\u00E4\u00E4st\u00E4 nopeasti liikkeelle.  Jos haluat asentaa JSPWikin osaksi olemassaolevaa j\u00E4rjestelm\u00E4\u00E4si, sinun kannattaa muokata <code>preferences.ini</code> -tiedostoa suoraan.  L\u00F6yd\u00E4t esimerkkitiedoston hakemistosta <code>wikihakemisto/WEB-INF/</code>.
 install.jsp.intro.title                         = JSPWikin asennusohjelma
 install.jsp.security.admaccount.enabled         = Olemassa
 install.jsp.security.admaccount.enabled.desc    = T\u00E4lle wikille on luotu yll\u00E4pit\u00E4j\u00E4n tunnus nimelt\u00E4 <strong>admin</strong>, joka kuuluu ryhm\u00E4\u00E4n <strong>Admin</strong>.  JSPWikin oletusturvamalli antaa t\u00E4m\u00E4n ryhm\u00E4n j\u00E4senille kaikkivoivan <code>AllPermission</code> -luvan jspwiki.policy-tiedostossa..
@@ -114,7 +114,7 @@ install.jsp.security.sec.conf.opt1              = JAAS ja servlet-alustan turvaj
 install.jsp.security.sec.conf.opt2              = Servlet-alustan turvaj\u00E4rjestelm\u00E4
 install.jsp.security.title                      = Turvaj\u00E4rjestelm\u00E4
 install.jsp.title                               = JSPWikin asennusohjelma
-install.jsp.validated.new.props                 = T\u00E4ss\u00E4 uusi jspwiki.properties -tiedostosi.
+install.jsp.validated.new.props                 = T\u00E4ss\u00E4 uusi preferences.ini -tiedostosi.
 
 #
 # The Javascript stuff
