--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_fr.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_fr.properties
@@ -76,8 +76,8 @@ diff.traditional.removed = En ligne {0}, suppression de {1}
 #
 install.installer.default.appname               = MonWiki
 install.installer.default.pagedir               = Configurez-moi!
-install.installer.props.notsaved                = Impossible d''\u00E9crire le fichier de propri\u00E9t\u00E9s: {0}. Veuillez cr\u00E9er votre jspwiki.properties avec le contenu ci-dessous:\n{1}
-install.installer.props.saved                   = Vos nouvelles propri\u00E9t\u00E9s ont \u00E9t\u00E9 enregistr\u00E9es. Veuillez red\u00E9marrer votre conteneur Web (\u00E0 moins que ceci soit votre premi\u00E8re installation). Veuillez trouver ci-dessous votre nouveau fichier jspwiki.properties.
+install.installer.props.notsaved                = Impossible d''\u00E9crire le fichier de propri\u00E9t\u00E9s: {0}. Veuillez cr\u00E9er votre preferences.ini avec le contenu ci-dessous:\n{1}
+install.installer.props.saved                   = Vos nouvelles propri\u00E9t\u00E9s ont \u00E9t\u00E9 enregistr\u00E9es. Veuillez red\u00E9marrer votre conteneur Web (\u00E0 moins que ceci soit votre premi\u00E8re installation). Veuillez trouver ci-dessous votre nouveau fichier preferences.ini.
 install.installer.unable.read.props             = Impossible de lire les propri\u00E9t\u00E9s: {0}
 install.installer.validate.appname              = Vous devez d\u00E9finir le nom de l'application.
 install.installer.validate.baseurl              = Vous devez d\u00E9finir l' URL de base de ce wiki.
@@ -108,8 +108,8 @@ install.jsp.install.warning                     = Attention :
 install.jsp.instr.desc                          = Quand vous cliquerez sur <em>Configurer</em>, l''installeur enregistrera vos param\u00E8tres dans <code>{0}</code>. Il cr\u00E9era \u00E9galement un compte Administrateur avec un mot de passe g\u00E9n\u00E9r\u00E9 al\u00E9atoirement, et un groupe Admin correspondant.
 install.jsp.instr.submit                        = Configurer
 install.jsp.intro.p1                            = Bienvenue!  Cette petite page JSP est l\u00F4 pour vous aider dans la premi\u00E8re \u00E9tape d\u00E9licate de l'installation de JSPWiki. Si vous voyez cette page, c'est que vous avez d\u00E9j\u00F4 install\u00E9 correctement JSPWiki dans votre conteneur Web.
-install.jsp.intro.p2                            = Maintenant, il y a deux ou trois choses que vous devez configurer. En pressant Soumettre, le fichier <code>jspwiki.properties</code> de la distribution sera modifi\u00E9; s'il est introuvable, un nouveau fichier sera cr\u00E9\u00E9.
-install.jsp.intro.p3                            = Ce syst\u00E8me de configuration est con\u00E7u pour les personnes qui veulent pouvoir d\u00E9marrer tr\u00E8s vite. Si vous voulez int\u00E9grer JSPWiki \u00E0 un syst\u00E8me existant, je vous recommande d'aller \u00E9diterle fichier <code>jspwiki.properties</code> directement. Vous trouverez un exemple de fichier de configuration dans le r\u00E9pertoire <code>yourwiki/WEB-INF/</code>.
+install.jsp.intro.p2                            = Maintenant, il y a deux ou trois choses que vous devez configurer. En pressant Soumettre, le fichier <code>preferences.ini</code> de la distribution sera modifi\u00E9; s'il est introuvable, un nouveau fichier sera cr\u00E9\u00E9.
+install.jsp.intro.p3                            = Ce syst\u00E8me de configuration est con\u00E7u pour les personnes qui veulent pouvoir d\u00E9marrer tr\u00E8s vite. Si vous voulez int\u00E9grer JSPWiki \u00E0 un syst\u00E8me existant, je vous recommande d'aller \u00E9diterle fichier <code>preferences.ini</code> directement. Vous trouverez un exemple de fichier de configuration dans le r\u00E9pertoire <code>yourwiki/WEB-INF/</code>.
 install.jsp.intro.title                         = Installeur JSPWiki
 install.jsp.security.admaccount.enabled         = Activ\u00E9
 install.jsp.security.admaccount.enabled.desc    = Ce Wiki a un compte administrateur nomm\u00E9 <strong>admin</strong> qui fait partie du groupe Wiki <strong>Admin</strong>. Par d\u00E9faut, la politique de s\u00E9curit\u00E9 de JSPWiki accorde \u00E0 tous les membres du groupe Admin le privil\u00E8ge omnipotent <code>AllPermission</code>.
@@ -122,7 +122,7 @@ install.jsp.security.sec.conf.opt1              = JAAS et s\u00E9curit\u00E9 du 
 install.jsp.security.sec.conf.opt2              = S\u00E9curit\u00E9 du conteneur Web seulement
 install.jsp.security.title                      = S\u00E9curit\u00E9
 install.jsp.title                               = Installeur JSPWiki
-install.jsp.validated.new.props                 = Voici votre nouveau jspwiki.properties
+install.jsp.validated.new.props                 = Voici votre nouveau preferences.ini
 
 #
 # The Javascript stuff
