--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_it.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_it.properties
@@ -74,8 +74,8 @@ diff.traditional.removed = Linea {0} eliminata {1}
 #
 install.installer.default.appname               = MyWiki
 install.installer.default.pagedir               = Per favore, configurami !
-install.installer.props.notsaved                = Impossibile scrivere le propriet&agrave;: {0}. Per favore copiate il file sottostante come il vostro nuovo jspwiki.properties:\n{1}
-install.installer.props.saved                   = Le vostre nuove propriet&agrave sono state salvate.  Per favore, fate ripartire il Container (a meno che questa non fosse la vostra primaistallazione).  Scrollate per vedere il vostro nuovo jspwiki.properties.
+install.installer.props.notsaved                = Impossibile scrivere le propriet&agrave;: {0}. Per favore copiate il file sottostante come il vostro nuovo preferences.ini:\n{1}
+install.installer.props.saved                   = Le vostre nuove propriet&agrave sono state salvate.  Per favore, fate ripartire il Container (a meno che questa non fosse la vostra primaistallazione).  Scrollate per vedere il vostro nuovo preferences.ini.
 install.installer.unable.read.props             = Impossiblie leggere le propriet&agrave: {0}
 install.installer.validate.appname              = Occorre definire il nome dell'applicazione.
 install.installer.validate.baseurl              = Occorre definire il base URL per questo wiki.
@@ -106,8 +106,8 @@ install.jsp.install.warning                     = Attenzione:
 install.jsp.instr.desc                          = Dopo che avrete selezionato <em>Configura!</em>, l' installer scriver&agrave; i setting ottenuti in: <code>{0}</code>. Verr&agrave; anche creato un account di Amministratore con una password casuale e un corrispondente gruppo Admin. 
 install.jsp.instr.submit                        = Configura!
 install.jsp.intro.p1                            = Benvenuti! Questa semplice pagina JSP serve ad aiutare a completare il primo passo dell'istallazione. Se potete vedere questa pagina, avete istallato correttamente JSPWiki nel container web.
-install.jsp.intro.p2                            = Ora ci sono alcune cose che occorre configurare. Quando premerete il bottone invia, il file <code>jspwiki.properties</code> contenuto nella distribuzione standard ver&agrave; modificato, o, se non potesseessere trovato, ne verr&agrave; creato uno nuovo.
-install.jsp.intro.p3                            = Questo sistema di setup &egrave; pensato per chi vuole avere un sistema funzionante velocemente. Se volete integrare JSPWiki in un sistema esistente, vi raccomandiamo di modificare il file<code>jspwiki.properties</code> direttamente.  Potete trovare una configurazione di esempio sotto:<code>yourwiki/WEB-INF/</code>.
+install.jsp.intro.p2                            = Ora ci sono alcune cose che occorre configurare. Quando premerete il bottone invia, il file <code>preferences.ini</code> contenuto nella distribuzione standard ver&agrave; modificato, o, se non potesseessere trovato, ne verr&agrave; creato uno nuovo.
+install.jsp.intro.p3                            = Questo sistema di setup &egrave; pensato per chi vuole avere un sistema funzionante velocemente. Se volete integrare JSPWiki in un sistema esistente, vi raccomandiamo di modificare il file<code>preferences.ini</code> direttamente.  Potete trovare una configurazione di esempio sotto:<code>yourwiki/WEB-INF/</code>.
 install.jsp.intro.title                         = JSPWiki Installer
 install.jsp.security.admaccount.enabled         = Abilitato
 install.jsp.security.admaccount.enabled.desc    = Questo wiki ha un account di amministratore con identificativo <strong>admin</strong> che f&agrave; parte del gruppo wiki <strong>Admin</strong>. Per default, JSPWiki assegna a tutti i membri del gruppo Admin group il permesso <code>AllPermission</code> che permette di fare qualsiasi cosa.
@@ -120,7 +120,7 @@ install.jsp.security.sec.conf.opt1              = Sicurezza basata su JAAS e sul
 install.jsp.security.sec.conf.opt2              = Sicurezza basata solo sul Container 
 install.jsp.security.title                      = Sicurezza
 install.jsp.title                               = JSPWiki Installer
-install.jsp.validated.new.props                 = Ecco il vostro nuovo file  jspwiki.properties
+install.jsp.validated.new.props                 = Ecco il vostro nuovo file  preferences.ini
 
 #
 # The Javascript stuff
