--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_pt_BR.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_pt_BR.properties
@@ -72,8 +72,8 @@ diff.traditional.removed = Na linha {0} removido {1}
 #
 install.installer.default.appname               = MinhaWiki
 install.installer.default.pagedir               = Por favor me configure!
-install.installer.props.notsaved                = N\u00E3o foi poss\u00EDvel escrever as propriedades: {0}. Por favor copie o arquivo abaixo como o seu jspwiki.properties:\n{1}
-install.installer.props.saved                   = Suas novas propriedades foram salvas.  Por favor reinicie o seu container (a n\u00E3o ser que esta seja sua primeira instala\u00E7\u00E3o).  Des\u00E7a um pouco para ver o seu novo arquivo jspwiki.properties.
+install.installer.props.notsaved                = N\u00E3o foi poss\u00EDvel escrever as propriedades: {0}. Por favor copie o arquivo abaixo como o seu preferences.ini:\n{1}
+install.installer.props.saved                   = Suas novas propriedades foram salvas.  Por favor reinicie o seu container (a n\u00E3o ser que esta seja sua primeira instala\u00E7\u00E3o).  Des\u00E7a um pouco para ver o seu novo arquivo preferences.ini.
 install.installer.unable.read.props             = N\u00E3o foi poss\u00EDvel ler as propriedades: {0}
 install.installer.validate.appname              = Voc\u00EA deve definir o nome da aplica\u00E7\u00E3o.
 install.installer.validate.baseurl              = Voc\u00EA deve definir a URL base para esta wiki.
@@ -104,8 +104,8 @@ install.jsp.install.warning                     = Aviso:
 install.jsp.instr.desc                          = Ap\u00F3s voc\u00EA clicar em <em>Configurar!</em>, o instalador escrever\u00E1 suas prefer\u00EAncias em <code>{0}</code>. Tamb\u00E9m criar\u00E1 uma conta de Administrador com uma senha aleat\u00F3ria e um grupo Admin correspondente.\u0009\u0009\u0009    
 install.jsp.instr.submit                        = Configurar!
 install.jsp.intro.p1                            = Bem vindo!  Esta pequena p\u00E1gina JSP est\u00E1 aqui para lhe ajudar no primeiro passo da instala\u00E7\u00E3o da JSPWiki. Se voc\u00EA est\u00E1 vendo essa p\u00E1gina, voc\u00EA instalou corretamente a JSPWiki no seu container.
-install.jsp.intro.p2                            = Agora h\u00E1 algumas coisas que voc\u00EA deve configurar. Quando voc\u00EA apertar Configurar, o arquivo <code>jspwiki.properties</code> ser\u00E1 modificado, ou se ele n\u00E3o for encontrado, um novo ser\u00E1 criado.
-install.jsp.intro.p3                            = Esta op\u00E7\u00E3o de instala\u00E7\u00E3o \u00E9 para pessoas que desejam a JSPWiki funcionando rapidamente. Se voc\u00EA deseja integrar a JSPWiki com um sistema existente eu recomendo que voc\u00EA edite o arquivo <code>jspwiki.properties</code> diretamente. Voc\u00EA pode encontrar um exemplo do arquivo de configura\u00E7\u00E3o em <code>suawiki/WEB-INF/</code>.
+install.jsp.intro.p2                            = Agora h\u00E1 algumas coisas que voc\u00EA deve configurar. Quando voc\u00EA apertar Configurar, o arquivo <code>preferences.ini</code> ser\u00E1 modificado, ou se ele n\u00E3o for encontrado, um novo ser\u00E1 criado.
+install.jsp.intro.p3                            = Esta op\u00E7\u00E3o de instala\u00E7\u00E3o \u00E9 para pessoas que desejam a JSPWiki funcionando rapidamente. Se voc\u00EA deseja integrar a JSPWiki com um sistema existente eu recomendo que voc\u00EA edite o arquivo <code>preferences.ini</code> diretamente. Voc\u00EA pode encontrar um exemplo do arquivo de configura\u00E7\u00E3o em <code>suawiki/WEB-INF/</code>.
 install.jsp.intro.title                         = Instalador JSPWiki
 install.jsp.security.admaccount.enabled         = Ativada
 install.jsp.security.admaccount.enabled.desc    = Esta wiki possui uma conta de administrador chamada <strong>admin</strong> que pertence ao grupo wiki <strong>Admin</strong>. Por padr\u00E3o, a pol\u00EDtica de seguran\u00E7a da JSPWiki garante \u00E0 todos os membros do grupo Admin as poderosas permiss\u00F5es <code>AllPermission</code>.
@@ -118,7 +118,7 @@ install.jsp.security.sec.conf.opt1              = JAAS mais um container de segu
 install.jsp.security.sec.conf.opt2              = Container de seguran\u00E7a apenas
 install.jsp.security.title                      = Seguran\u00E7a
 install.jsp.title                               = Instalador JSPWiki
-install.jsp.validated.new.props                 = Aqui est\u00E1 o seu novo arquivo jspwiki.properties
+install.jsp.validated.new.props                 = Aqui est\u00E1 o seu novo arquivo preferences.ini
 
 #
 # The Javascript stuff
