--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_de.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_de.properties
@@ -80,8 +80,8 @@ diff.traditional.removed = Zeile {0}: {1} gel\u00F6scht.
 #
 install.installer.default.appname               = MeinWiki
 install.installer.default.pagedir               = Bitte konfigurieren!
-install.installer.props.notsaved                = Fehler beim Schreiben der Einstellungen: {0}. Bitte speichere die untenstehende Datei als deine jspwiki.properties ab:\n{1}
-install.installer.props.saved                   = Deine neuen Einstellungen wurden gespeichert. Bitte starte deinen Container neu, um die Einstellungen zu \u00FCbernehmen (sofern dies nicht die Erstinstallation war). Scrolle etwas weiter nach unten, um deine neue jspwiki.properties zu sehen.
+install.installer.props.notsaved                = Fehler beim Schreiben der Einstellungen: {0}. Bitte speichere die untenstehende Datei als deine preferences.ini ab:\n{1}
+install.installer.props.saved                   = Deine neuen Einstellungen wurden gespeichert. Bitte starte deinen Container neu, um die Einstellungen zu \u00FCbernehmen (sofern dies nicht die Erstinstallation war). Scrolle etwas weiter nach unten, um deine neue preferences.ini zu sehen.
 install.installer.unable.read.props             = Fehler beim Lesen der Einstellungen: {0}
 install.installer.validate.appname              = Du musst einen Anwendungsnamen angeben.
 install.installer.validate.baseurl              = Du musst die Basis-URL f\u00FCr dieses Wiki angeben.
@@ -112,8 +112,8 @@ install.jsp.install.warning                     = Warnung:
 install.jsp.instr.desc                          = Wenn du auf ''Weiter'' klickst, wird das Installationsprogramm deine Einstellungen in <code>{0}</code> abspeichern. Es wird au\u00DFerdem einen Administratorzugang mit einem zuf\u00E4lligen Passwort sowie eine entsprechende Admin-Gruppe erstellen.
 install.jsp.instr.submit                        = Weiter
 install.jsp.intro.p1                            = Willkommen! Diese kleine Seite ist dazu da, Dir \u00FCber die ersten H\u00FCrden deiner JSPWiki-Installation hinwegzuhelfen. Wenn du diese Seite siehst, hast du JSPWiki bereits korrekt in deinem Container installiert.
-install.jsp.intro.p2                            = Es m\u00FCssen jetzt ein paar Dinge konfiguriert werden. Wenn du auf 'Weiter' klickst, wird die Datei <code>jspwiki.properties</code> aus der Distribution angepasst oder neu erstellt, falls sie nicht gefunden werden kann.
-install.jsp.intro.p3                            = Dieses Installationsprogramm ist wirklich nur f\u00FCr Leute gedacht, die mit JSPWiki schnell und einfach loslegen wollen. Solltest du JSPWiki in ein bestehendes System integrieren wollen, ist es ratsam die Datei <code>jspwiki.properties</code> von Hand zu bearbeiten. Eine Vorlage findest du unter <code>DeinWiki/WEB-INF/</code>.
+install.jsp.intro.p2                            = Es m\u00FCssen jetzt ein paar Dinge konfiguriert werden. Wenn du auf 'Weiter' klickst, wird die Datei <code>preferences.ini</code> aus der Distribution angepasst oder neu erstellt, falls sie nicht gefunden werden kann.
+install.jsp.intro.p3                            = Dieses Installationsprogramm ist wirklich nur f\u00FCr Leute gedacht, die mit JSPWiki schnell und einfach loslegen wollen. Solltest du JSPWiki in ein bestehendes System integrieren wollen, ist es ratsam die Datei <code>preferences.ini</code> von Hand zu bearbeiten. Eine Vorlage findest du unter <code>DeinWiki/WEB-INF/</code>.
 install.jsp.intro.title                         = JSPWiki Installation
 install.jsp.security.admaccount.enabled         = Aktiviert
 install.jsp.security.admaccount.enabled.desc    = Dieses Wiki verf\u00FCgt \u00FCber einen Administratorzugang namens <strong>admin</strong>, der Mitglied der Wiki-Gruppe <strong>Admin</strong> ist. Standardm\u00E4\u00DFig weisen die Sicherheitseinstellungen von JSPWiki allen Mitgliedern dieser Gruppe s\u00E4mtliche Rechte zu (<code>AllPermission</code>).
@@ -126,7 +126,7 @@ install.jsp.security.sec.conf.opt1              = JAAS und Container Security (S
 install.jsp.security.sec.conf.opt2              = Nur Container Security
 install.jsp.security.title                      = Sicherheit
 install.jsp.title                               = JSPWiki Installation
-install.jsp.validated.new.props                 = Hier ist deine neue jspwiki.properties
+install.jsp.validated.new.props                 = Hier ist deine neue preferences.ini
 
 #
 #  The Javascript stuff
