--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_es.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_es.properties
@@ -72,8 +72,8 @@ diff.traditional.removed = En la l\u00EDnea {0} borr\u00F3 {1}
 #
 install.installer.default.appname               = MiWiki
 install.installer.default.pagedir               = \u00A1Por favor config\u00FArame!
-install.installer.props.notsaved                = Incapaz de escribir las propiedades\\: {0}. Por favor copia el guarda el siguiente fichero como jspwiki.properties\\:\\n{1}
-install.installer.props.saved                   = Tus nuevas propiedades han sido guardadas.  Por favor, reinicia tu contenedor de aplicaciones (excepto si ha sido tu primera instalaci\\u00F3n).  Navega hacia el final de la p\\u00E1gina para ver el contenido de tu fichero jspwiki.properties.
+install.installer.props.notsaved                = Incapaz de escribir las propiedades\\: {0}. Por favor copia el guarda el siguiente fichero como preferences.ini\\:\\n{1}
+install.installer.props.saved                   = Tus nuevas propiedades han sido guardadas.  Por favor, reinicia tu contenedor de aplicaciones (excepto si ha sido tu primera instalaci\\u00F3n).  Navega hacia el final de la p\\u00E1gina para ver el contenido de tu fichero preferences.ini.
 install.installer.unable.read.props             = Incapaz de leer las propiedades: {0}
 install.installer.validate.appname              = Tienes que definir el nombre de la aplicaci\u00F3n.
 install.installer.validate.logfile              = Tienes que definir un directorio de log.
@@ -117,7 +117,7 @@ install.jsp.security.sec.conf.opt1              = JAAS + seguridad del contenedo
 install.jsp.security.sec.conf.opt2              = Solo seguridad del contenedor de aplicaciones
 install.jsp.security.title                      = Seguridad
 install.jsp.title                               = Instalador de JSPWiki
-install.jsp.validated.new.props                 = Aqu\u00ED est\u00E1 tu nuevo jspwiki.properties
+install.jsp.validated.new.props                 = Aqu\u00ED est\u00E1 tu nuevo preferences.ini
 
 #
 # The Javascript stuff
