--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_nl.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_nl.properties
@@ -73,7 +73,7 @@ diff.traditional.removed = Op lijn {0} werden {1} verwijderd
 install.installer.default.appname               = MijnWiki
 install.installer.default.pagedir               = Geef een directory op waar de pagina's moeten komen!
 install.installer.props.notsaved                = Kan de properties niet wegschrijven: {0}. Sla onderstaande file op als jspwiki-custom.properties:\n{1}
-install.installer.props.saved                   = Je nieuwe properties zijn opgeslagen in {0}. Copy deze file naar een directory die op het classpath van je container staat (tomcat lib directory b.v.), daarna je container herstarten.Scroll naar beneden om je nieuwe jspwiki.properties te zien.
+install.installer.props.saved                   = Je nieuwe properties zijn opgeslagen in {0}. Copy deze file naar een directory die op het classpath van je container staat (tomcat lib directory b.v.), daarna je container herstarten.Scroll naar beneden om je nieuwe preferences.ini te zien.
 install.installer.unable.read.props             = Kan de properties niet lezen: {0}
 install.installer.validate.appname              = Je moet de applicatie naam opgeven
 install.installer.validate.logfile              = Je moet de log file opgeven.
@@ -186,7 +186,7 @@ lostpwd.reset.unable        = Er was een probleem met deze actie. Probeer opnieu
 #
 markupparser.error.invalidset        = Foutief SET commando gevonden: {0}
 markupparser.error.javascriptattempt = Fout in javascript generatie!
-markupparser.error.nointerwikiref    = Er is geen InterWiki definitie in jspwiki.properties voor "{0}"!
+markupparser.error.nointerwikiref    = Er is geen InterWiki definitie in preferences.ini voor "{0}"!
 markupparser.error.parserfailure     = Fout in de Parser: {0}
 markupparser.error.plugininsertion   = {0} : {1} - Fout opgetreden bij invoegen van plugin: {2}
 markupparser.link.create             = Create "{0}"
