--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_zh_CN.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_zh_CN.properties
@@ -77,8 +77,8 @@ diff.traditional.removed = \u5728\u7B2C {0} \u884C\u5220\u9664\u4E86 {1}
 #
 install.installer.default.appname               = MyWiki
 install.installer.default.pagedir               = \u8BF7\u914D\u7F6E\uFF01
-install.installer.props.notsaved                = \u65E0\u6CD5\u5199\u5165\u5C5E\u6027\uFF1A{0}\u3002 \u8BF7\u5C06\u4E0B\u9762\u7684\u6587\u4EF6\u590D\u5236\u4E3A\u60A8\u7684 jspwiki.properties\n{1}
-install.installer.props.saved                   = \u65B0\u7684\u5C5E\u6027\uFF08properties\uFF09\u5DF2\u7ECF\u4FDD\u5B58\u3002\u9664\u975E\u8FD9\u662F\u60A8\u7B2C\u4E00\u6B21\u5B89\u88C5\uFF0C\u5426\u5219\u8BF7\u91CD\u65B0\u542F\u52A8\u5BB9\u5668\uFF08container\uFF09\u3002\u5F80\u4E0B\u62C9\u4E00\u70B9\u67E5\u770B\u60A8\u7684\u65B0 jspwiki.properties\u3002
+install.installer.props.notsaved                = \u65E0\u6CD5\u5199\u5165\u5C5E\u6027\uFF1A{0}\u3002 \u8BF7\u5C06\u4E0B\u9762\u7684\u6587\u4EF6\u590D\u5236\u4E3A\u60A8\u7684 preferences.ini\n{1}
+install.installer.props.saved                   = \u65B0\u7684\u5C5E\u6027\uFF08properties\uFF09\u5DF2\u7ECF\u4FDD\u5B58\u3002\u9664\u975E\u8FD9\u662F\u60A8\u7B2C\u4E00\u6B21\u5B89\u88C5\uFF0C\u5426\u5219\u8BF7\u91CD\u65B0\u542F\u52A8\u5BB9\u5668\uFF08container\uFF09\u3002\u5F80\u4E0B\u62C9\u4E00\u70B9\u67E5\u770B\u60A8\u7684\u65B0 preferences.ini\u3002
 install.installer.unable.read.props             = \u4E0D\u80FD\u8BFB\u53D6\u5C5E\u6027\uFF1A{0}
 install.installer.validate.appname              = \u5FC5\u987B\u5B9A\u4E49\u5E94\u7528\u7A0B\u5E8F\u540D\u79F0\u3002
 install.installer.validate.baseurl              = \u5FC5\u987B\u5BF9\u6B64 wiki \u5B9A\u4E49\u57FA\u672C URL\uFF08base URL\uFF09\u3002
@@ -109,8 +109,8 @@ install.jsp.install.warning                     = \u8B66\u544A\uFF1A
 install.jsp.instr.desc                          = \u5728\u5355\u51FB<em>\u914D\u7F6E\uFF01</em>\u540E\uFF0C\u5B89\u88C5\u7A0B\u5E8F\u5C06\u628A\u60A8\u7684\u8BBE\u7F6E\u5199\u5230 <code>{0}</code>\u3002 \u5B83\u8FD8\u4F1A\u521B\u5EFA\u4E00\u4E2A\u7BA1\u7406\u5458\u5E10\u6237\uFF08\u5BC6\u7801\u968F\u673A\u751F\u6210\uFF09\u548C\u4E00\u4E2A Admin \u7EC4\u3002
 install.jsp.instr.submit                        = \u914D\u7F6E\uFF01
 install.jsp.intro.p1                            = \u6B22\u8FCE\u4F7F\u7528 JSPWiki\uFF01\u672C JSP \u9875\u9762\u65E8\u5728\u5E2E\u52A9\u60A8\u5B8C\u6210 JSPWiki \u5B89\u88C5\u7684\u7B2C\u4E00\u4E2A\u9636\u6BB5\u3002\u5982\u679C\u770B\u5230\u6B64\u9875\u9762\uFF0C\u8BF4\u660E\u60A8\u5DF2\u7ECF\u5728 Web \u5BB9\u5668\uFF08Web Container\uFF09\u91CC\u6B63\u786E\u5730\u5B89\u88C5\u4E86 JSPWiki\u3002
-install.jsp.intro.p2                            = \u73B0\u5728\u8FD8\u9700\u8981\u8FDB\u884C\u4E00\u4E9B\u914D\u7F6E\u3002\u5728\u6309\u4E0B\u201C\u914D\u7F6E\uFF01\u201D\u540E\uFF0C\u5C06\u4F1A\u4FEE\u6539\u7A0B\u5E8F\u5305\u91CC\u7684 <code>jspwiki.properties</code> \u6587\u4EF6\uFF0C\u5982\u679C\u627E\u4E0D\u5230\u7684\u8FD9\u4E2A\u6587\u4EF6\u7684\u8BDD\uFF0C\u7A0B\u5E8F\u4F1A\u521B\u5EFA\u8FD9\u6837\u4E00\u4E2A\u65B0\u6587\u4EF6\u3002
-install.jsp.intro.p3                            = \u672C\u5B89\u88C5\u7A0B\u5E8F\u662F\u9488\u5BF9\u90A3\u4E9B\u53EA\u60F3\u5C3D\u5FEB\u5B89\u88C5\u5E76\u8FD0\u884C JSPWiki \u7684\u4EBA\u8BBE\u8BA1\u7684\u3002\u5982\u679C\u60A8\u6253\u7B97\u628A JSPWiki \u96C6\u6210\u5230\u73B0\u6709\u7684\u7CFB\u7EDF\uFF0C\u5EFA\u8BAE\u76F4\u63A5\u7F16\u8F91 <code>jspwiki.properties</code> \u6587\u4EF6\u3002\u53EF\u4EE5\u5728 <code>yourwiki/WEB-INF/</code> \u4E0B\u9762\u627E\u5230\u4E00\u4E2A\u6837\u672C\u914D\u7F6E\u6587\u4EF6\u3002
+install.jsp.intro.p2                            = \u73B0\u5728\u8FD8\u9700\u8981\u8FDB\u884C\u4E00\u4E9B\u914D\u7F6E\u3002\u5728\u6309\u4E0B\u201C\u914D\u7F6E\uFF01\u201D\u540E\uFF0C\u5C06\u4F1A\u4FEE\u6539\u7A0B\u5E8F\u5305\u91CC\u7684 <code>preferences.ini</code> \u6587\u4EF6\uFF0C\u5982\u679C\u627E\u4E0D\u5230\u7684\u8FD9\u4E2A\u6587\u4EF6\u7684\u8BDD\uFF0C\u7A0B\u5E8F\u4F1A\u521B\u5EFA\u8FD9\u6837\u4E00\u4E2A\u65B0\u6587\u4EF6\u3002
+install.jsp.intro.p3                            = \u672C\u5B89\u88C5\u7A0B\u5E8F\u662F\u9488\u5BF9\u90A3\u4E9B\u53EA\u60F3\u5C3D\u5FEB\u5B89\u88C5\u5E76\u8FD0\u884C JSPWiki \u7684\u4EBA\u8BBE\u8BA1\u7684\u3002\u5982\u679C\u60A8\u6253\u7B97\u628A JSPWiki \u96C6\u6210\u5230\u73B0\u6709\u7684\u7CFB\u7EDF\uFF0C\u5EFA\u8BAE\u76F4\u63A5\u7F16\u8F91 <code>preferences.ini</code> \u6587\u4EF6\u3002\u53EF\u4EE5\u5728 <code>yourwiki/WEB-INF/</code> \u4E0B\u9762\u627E\u5230\u4E00\u4E2A\u6837\u672C\u914D\u7F6E\u6587\u4EF6\u3002
 install.jsp.intro.title                         = JSPWiki \u5B89\u88C5\u7A0B\u5E8F
 install.jsp.security.admaccount.enabled         = \u5DF2\u542F\u7528
 install.jsp.security.admaccount.enabled.desc    = \u6B64 wiki \u6709\u4E00\u4E2A\u540D\u4E3A <strong>admin</strong> \u7684\u7BA1\u7406\u5458\u5E10\u6237\uFF0C\u8FD9\u4E2A\u5E10\u6237\u5C5E\u4E8E wiki \u7EC4 <strong>Admin</strong>\u3002 \u7F3A\u7701\u60C5\u51B5\u4E0B\uFF0CJSPWiki \u7684\u5B89\u5168\u6027\u7B56\u7565\u8D4B\u4E88 Admin \u7EC4\u4E2D\u7684\u6240\u6709\u6210\u5458\u5177\u6709\u5168\u90E8\u6743\u9650\u7684 <code>AllPermission</code>\u3002
@@ -123,7 +123,7 @@ install.jsp.security.sec.conf.opt1              = JAAS \u548C\u5BB9\u5668\uFF08c
 install.jsp.security.sec.conf.opt2              = \u4EC5\u4F7F\u7528\u5BB9\u5668\u5B89\u5168\u6027
 install.jsp.security.title                      = \u5B89\u5168\u8BBE\u7F6E
 install.jsp.title                               = JSPWiki \u5B89\u88C5\u7A0B\u5E8F
-install.jsp.validated.new.props                 = \u4E0B\u9762\u662F\u60A8\u7684\u65B0 jspwiki.properties \u6587\u4EF6
+install.jsp.validated.new.props                 = \u4E0B\u9762\u662F\u60A8\u7684\u65B0 preferences.ini \u6587\u4EF6
 
 #
 # The Javascript stuff
